cluster/download/lidarr/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: download
spec:
  selector:
    app: lidarr
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8686
